--- a/Client/package.json
+++ b/Client/package.json
@@ -11,12 +11,17 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "add": "^2.0.6",
     "axios": "^0.23.0",
+    "deep-email-validator": "^0.1.18",
+    "email-validator": "^2.0.4",
     "moment": "^2.29.1",
+    "password-validator": "^5.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
