--- a/Client/package.json
+++ b/Client/package.json
@@ -13,11 +13,13 @@
     "@testing-library/user-event": "^12.8.3",
     "add": "^2.0.6",
     "axios": "^0.23.0",
+    "chart.js": "^3.6.0",
     "deep-email-validator": "^0.1.18",
     "email-validator": "^2.0.4",
     "moment": "^2.29.1",
     "password-validator": "^5.1.2",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
