--- a/Client/package.json
+++ b/Client/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "4.0.3",
     "react-to-pdf": "0.0.14",
     "react-toastify": "^8.0.3",
+    "recharts": "^2.1.6",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
