--- a/Client/package.json
+++ b/Client/package.json
@@ -9,10 +9,12 @@
     "@mui/material": "^5.0.4",
     "@mui/styled-engine-sc": "^5.0.3",
     "@react-pdf/renderer": "^2.0.20",
+    "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/react-pdf": "^5.0.8",
+    "@types/react-redux": "^7.1.20",
     "add": "^2.0.6",
     "axios": "^0.23.0",
     "chart.js": "^3.6.0",
@@ -23,11 +25,13 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-to-pdf": "0.0.14",
     "react-toastify": "^8.0.3",
     "recharts": "^2.1.6",
+    "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
