--- a/Client/package.json
+++ b/Client/package.json
@@ -17,17 +17,25 @@
     "@types/react-redux": "^7.1.20",
     "add": "^2.0.6",
     "axios": "^0.23.0",
+    "bootstrap": "^5.1.3",
     "chart.js": "^3.6.0",
+    "datatables": "^1.10.18",
+    "datatables.net": "^1.11.3",
+    "datatables.net-dt": "^1.11.3",
     "deep-email-validator": "^0.1.18",
     "email-validator": "^2.0.4",
+    "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "password-validator": "^5.1.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.3.0",
+    "react-data-table-component": "^7.4.5",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
     "react-to-pdf": "0.0.14",
     "react-toastify": "^8.0.3",
     "recharts": "^2.1.6",
@@ -62,7 +70,9 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
+    "@types/jquery": "^3.5.8",
     "@types/react-dom": "^17.0.10",
+    "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.1"
   }
 }
