--- a/Client/package.json
+++ b/Client/package.json
@@ -40,6 +40,8 @@
     "react-toastify": "^8.0.3",
     "recharts": "^2.1.6",
     "redux-devtools-extension": "^2.13.9",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.4",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
