--- a/Client/package.json
+++ b/Client/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
     "react-redux": "^7.2.6",
+    "react-responsive-data-table": "^1.0.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
@@ -40,6 +41,7 @@
     "react-toastify": "^8.0.3",
     "recharts": "^2.1.6",
     "redux-devtools-extension": "^2.13.9",
+    "sass": "^1.44.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
     "styled-components": "^5.3.3",
